--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="Assets/css/style.css" />
+    <script src="/Assets/js/script.js"></script>
   </head>
   <body>
     <div class="wrapper">
@@ -28,14 +29,19 @@
           <button id="generate" class="btn">Generate Password</button>
         </div>
         <!--Added form to allow for specification of password criteria-->
-        <form>
+        <form class=form>
           <!--Added range slider and input for selecting the number of characters-->
-          <label for="characterNumber">Number of characters</label>
-          <input type="range" min="8" max="128" value="8" id="characterNumber">
-          <input type="number" min="8" max="128" value="8" id="characterNumber">
+          <div class=characterNumberContainer> 
+            <label for="characterNumber">Number of characters</label>
+            <input type="range" min="8" max="128" value="8" id="characterNumber">
+            <input class="numberInput" type="number" min="8" max="128" value="8" id="characterNumber">
+          </div>
           <!--Added uppercase and lower case check boxes-->
-          <label for="includeUppercase">Include uppercase</label>
-          <input type="checkbox" id="includeUppercase"> 
+          <div>
+            <label for="includeUppercase">Include uppercase</label>
+            <input type="checkbox" id="includeUppercase"> 
+          </div>
+
         </form>
       </div>
     </div>
