Added prompt for password length.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
     <link rel="stylesheet" href="Assets/css/style.css" />
-    <script src="/Assets/js/script.js"></script>
   </head>
   <body>
+    <script src="Assets/js/script.js" defer></script>
     <div class="wrapper">
       <header>
         <h1>Password Generator</h1>
