--- a/index.html
+++ b/index.html
@@ -29,20 +29,21 @@
           <button id="generate" class="btn">Generate Password</button>
         </div>
         <!--Added form to allow for specification of password criteria-->
-        <form class=form>
-          <!--Added range slider and input for selecting the number of characters-->
+        <!--
+          <form class=form>
+          Added range slider and input for selecting the number of characters
           <div class=characterNumberContainer> 
             <label for="characterNumber">Number of characters</label>
             <input type="range" min="8" max="128" value="8" id="characterNumber">
             <input class="numberInput" type="number" min="8" max="128" value="8" id="characterNumber">
           </div>
-          <!--Added uppercase and lower case check boxes-->
+          Added uppercase and lower case check boxes
           <div>
             <label for="includeUppercase">Include uppercase</label>
             <input type="checkbox" id="includeUppercase"> 
           </div>
-
         </form>
+        --> 
       </div>
     </div>
     <script src="script.js"></script>
