--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
         </div>
-        <!--Added form to allow for specification of password criteria-->
+        <!--Added form to allow for specification of password criteria, taken out because it does not fit criteria, which asks for prompts.-->
         <!--
           <form class=form>
           Added range slider and input for selecting the number of characters
